<resources>
    <string name="app_name">Weather Logger</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="more_details">More details</string>
    <string name="temperature">%1$s \u2103</string>
    <string name="update_text">Data as of %1$s</string>
    <string name="request_text">Updated as of %1$s</string>
    <string name="wind_text">Wind speed</string>
    <string name="wind_text_value">%1$s m/s</string>
    <string name="humidity_text">Humidity</string>
    <string name="humidity_text_value">%1$s %%</string>
    <string name="feels_like_text">Feels like</string>
    <string name="feels_like_text_value">%1$s \u2103</string>
    <string name="city_name">City name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="weather_icon">Weather icon</string>
    <string name="status_description">Status description</string>
    <string name="close_icon">Close icon</string>
</resources>